<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/vehicles">
        <item
            android:id="@+id/cityBikes"
            android:checkable="true"
            android:checked="true"
            android:title="@string/city_bikes" />

        <item
            android:id="@+id/marudor"
            android:checkable="true"
            android:checked="false"
            android:title="@string/db" />

        <item
            android:id="@+id/nvv"
            android:checkable="true"
            android:checked="false"
            android:title="@string/nvv" />

        <item
            android:id="@+id/bird"
            android:checkable="true"
            android:checked="false"
            android:title="@string/bird_scooter" />
    </group>

    <item
        android:id="@+id/overlay"
        android:checkable="true"
        android:checked="false"
        android:title="@string/overlay" />

    <item
        android:id="@+id/refresh"
        android:title="@string/refresh" />
</menu>